@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-10T16:15:14Z",
+  "timestamp" : "2022-07-11T01:05:05Z",
   "count_outdated" : 383,
   "uniques_outdated" : 208,
-  "count" : 411,
-  "uniques" : 223,
+  "count" : 414,
+  "uniques" : 224,
   "clones" : [
     {
       "timestamp": "2022-06-27T00:00:00Z",
@@ -98,10 +98,10 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
