@@ -1,6 +1,6 @@
 {
-  "count": 28,
-  "uniques": 2,
+  "count": 31,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-06-27T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
