@@ -1,3 +1,10 @@
+2022-07-11T01:05:05Z:
+* notice: last 14d: unq all: 3 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 208 383 / 223 411
+* notice: next accum: outdated-unq outdated-all / unq all: 208 383 / 224 414
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-07-10]
+
 2022-07-10T16:15:14Z:
 * notice: last 14d: unq all: 2 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 207 382 / 223 411
